force-app/main/default/objects/Payment_Line__c/Payment_Line__c.object-meta.xml
<CustomObject>
    <description>To be Deprecated: This object is used to capture the payments against a payment installment.</description>
    <label>Payment Transaction Line</label>
    <nameField>
        <label>Payment Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Transaction Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>