force-app/main/default/objects/Payment_Line__c/validationRules/No_Payment_Line.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Payment_Line</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW() , Payment_Schedule__r.Remaining_Amount__c
=0)</errorConditionFormula>
    <errorMessage>No Payment Line Can  be Formed,as there is no Balance due</errorMessage>
</ValidationRule>