force-app/main/default/objects/Payment_Line__c/validationRules/Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity</fullName>
    <active>false</active>
    <errorConditionFormula>Opportunity__c &lt;&gt; Payment_Schedule__r.Opportunity__c</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>This Opportunity is not related to Payment Schedule</errorMessage>
</ValidationRule>